--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.19.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "lodash": "^4.17.14",
     "mongoose": "^5.3.16"
   }
 }
